test/corpus/statements.txt
==================
statements
==================

fn work(rec project) {
  txt log = "";

  rec local = {
    name = "step",
  };

  log = log + "x";
  async work();
  wait;
  std::command({ Env = "KIRU_MESSAGE=" + log }, "echo hi");
  panic;
};

---

(source_file
  (function_declaration
    (identifier)
    (parameter_list
      (parameter
        (identifier)))
    (block
      (text_binding
        (identifier)
        (expression
          (string)))
      (record_binding
        (identifier)
        (expression
          (record_literal
            (record_field
              (identifier)
              (expression
                (string))))))
      (assignment_statement
        (identifier)
        (expression
          (binary_expression
            (expression
              (path
                (identifier)))
            (expression
              (string)))))
      (async_statement
        (expression
          (call_expression
            (path
              (identifier))
            (argument_list))))
      (wait_statement)
      (expression_statement
        (expression
          (call_expression
            (path
              (namespace
                (identifier))
              (identifier))
            (argument_list
              (expression
                (record_literal
                  (record_field
                    (identifier)
                    (expression
                      (binary_expression
                        (expression
                          (string))
                        (expression
                          (path
                            (identifier))))))))
              (expression
                (string))))))
      (panic_statement))))
